src/test_utils/snapshots/harnx__test_utils__tmux_e2e__nested_sub_agent_activity_no_duplicates.snap
---
source: src/test_utils/tmux_e2e.rs
expression: normalized
---
Welcome to harnx 0.30.0  *  Type .help for commands, Tab to complete.
# nested-parent v
🤖 nested-parent
> investigate the data trends

Let me investigate this. Delegating to researcher.

→ nested-researcher_session_prompt
   message: Investigate the data trends in detail.
> nested-researcher ▸ <UUID>
RESEARCHER_TEXT: Let me check the raw data first.Got initial data. Need deeper analysis. Delegating to analyst.

→ repro249_unique_mcp_tool
   {}
→ nested-analyst_session_prompt
   message: Perform deep analysis on the data trends.
> nested-analyst ▸ <UUID>
ANALYST_TEXT: Running deep analysis now.Analysis complete. The trend is clearly upward.

→ repro249_unique_mcp_tool
   {}
> nested-researcher ▸ <UUID>
Analyst confirmed the upward trend in the data.

   session_id: <UUID>
   response: 'RESEARCHER_TEXT: Let me check the raw data first.Got initial data. Need deeper analysis. Delegating [...]
PARENT_FINAL: Research complete. Data shows clear upward trend.


















































* 🤖 nested-parent
